fix: hero bg-image width and layout shift.

--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,3 @@ html {
 .dm-sans {
     font-family: var(--dm-sans);
 }
-
-@media (min-width: 1536px) {
-    #hero {
-        background-size: 100% auto;
-    }
-}
